# bmp-image-processor

./: CMakeLists.txt  README.md  main.cpp
command-parser/: parser.cpp  parser.h
exception/: exception.cpp  exception.h
filters/: blur.cpp  blur.h  convolution_kernel.cpp  convolution_kernel.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filters_applying.cpp  filters_applying.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
image/: image.cpp  image.h
